# equinox

./: .gitignore  Cargo.toml  README.md  TODO  about.toml  build.rs  index.html  index.js  lens flare  photon mapping idea
assets/: Makefile
coherence-base/: Cargo.toml
coherence-base/src/: camera.rs  display.rs  geometry.rs  instance.rs  lib.rs  material.rs  object.rs
coherence-base/src/device/: camera.rs  environment.rs  instance.rs  material.rs  object.rs  raster.rs
coherence-base/src/model/: environment.rs  instance.rs  object.rs
coherence-webgl2/: Cargo.toml  build.rs
coherence-webgl2-wasm/: Cargo.toml  index.html  index.js  styles.css  webpack.config.js
coherence-webgl2-wasm/src/: lib.rs
coherence-webgl2/src/: device.rs  engine.rs  lib.rs
coherence-webgl2/src/device/: camera.rs  display.rs  environment.rs  instance.rs  lens_flare.rs  material.rs  object.rs  raster.rs
coherence-webgl2/src/engine/: framebuffer.rs  shader.rs  texture.rs  texture_buffer.rs  texture_image.rs  uniform_buffer.rs
coherence-webgl2/src/render/: camera.rs  environment.rs  instance.rs  object.rs
coherence-webgl2/src/shaders/: copy_from_spectrum.glsl  fft.glsl  frag.glsl  present.glsl  vert.glsl
coherence-webgl2/src/shaders/include/: common.glsl  geometry.glsl  instance.glsl  material.glsl  object.glsl  random.glsl
css/: app.42933679.css  app.a39f7f26.css  app.b3a06504.css  app.d737d411.css  app.f7a7d487.css  chunk-vendors.86e69ae3.css
gallery/: README.md
js/: app.01ae81da.js  app.01ae81da.js.map  app.1d4da9ca.js  app.1d4da9ca.js.map  app.2b630017.js  app.2b630017.js.map  app.2d532a75.js  app.2d532a75.js.map  app.8d03cc89.js  app.8d03cc89.js.map  app.c1a1f3bd.js  app.c1a1f3bd.js.map  app.d22d5744.js  app.d22d5744.js.map  app.d2ae03a1.js  app.d2ae03a1.js.map  app.fac72d32.js  app.fac72d32.js.map  chunk-491d132c.1f64314c.js  chunk-491d132c.1f64314c.js.map  chunk-491d132c.3de05809.js  chunk-491d132c.3de05809.js.map  chunk-491d132c.42257e90.js  chunk-491d132c.42257e90.js.map  chunk-491d132c.7ab4072e.js  chunk-491d132c.7ab4072e.js.map  chunk-491d132c.91e73d45.js  chunk-491d132c.91e73d45.js.map  chunk-491d132c.936ba01a.js  chunk-491d132c.936ba01a.js.map  chunk-491d132c.a4160571.js  chunk-491d132c.a4160571.js.map  chunk-491d132c.d3b7a103.js  chunk-491d132c.d3b7a103.js.map  chunk-8d5a7e10.58a83714.js  chunk-8d5a7e10.58a83714.js.map  chunk-vendors.0660e2af.js  chunk-vendors.0660e2af.js.map  chunk-vendors.c1bd928f.js  chunk-vendors.c1bd928f.js.map
renderer/: Cargo.toml  index.html  index.js  package-lock.json  styles.css
renderer/src/: lib.rs
sigma-core/: Cargo.toml
sigma-core/src/: lib.rs
sigma-core/src/device/: camera.rs  instance.rs  object.rs  raster.rs
sigma-core/src/model/: instance.rs  raster.rs
sigma-webgl2/: Cargo.toml  build.rs
sigma-webgl2/src/: engine.rs  lib.rs
sigma-webgl2/src/engine/: shader.rs  texture_buffer.rs  uniform_buffer.rs
sigma-webgl2/src/shaders/: frag.glsl  present.glsl  random.glsl  vert.glsl
src/: device.rs  domain.rs  engine.rs  lib.rs  scene.rs  shaders.rs  web.rs
src/device/: allocator.rs  camera.rs  device.rs  display.rs  environment.rs  geometry.rs  instance.rs  integrator.rs  lens_flare.rs  material.rs  raster.rs
src/domain/: bounding_box.rs  camera.rs  dirty.rs  display.rs  environment.rs  geometry.rs  instance.rs  material.rs  raster.rs  scene.rs
src/engine/: framebuffer.rs  query.rs  readback_buffer.rs  shader.rs  texture.rs  uniform_buffer.rs  vertex_array.rs
src/scene/: alias.rs  aperture.rs  bounding_box.rs  camera.rs  dirty.rs  display.rs  environment.rs  geometry.rs  instance.rs  integrator.rs  material.rs  metadata.rs  raster.rs  scene.rs
src/shader/: fs_blit_to_canvas.glsl  fs_decompose_signal.glsl  fs_execute_fft_pass.glsl  fs_fft_pass.glsl  fs_gather_photons.glsl  fs_load_convolution_buffers.glsl  fs_load_filter_tile.glsl  fs_load_signal_tile.glsl  fs_post_process.glsl  fs_read_convolution_buffers.glsl  fs_read_signal_tile.glsl  fs_scatter_photons.glsl  vs_scatter_photons.glsl
src/shader/include/: camera.glsl  common.glsl  environment.glsl  geometry.glsl  instance.glsl  integrator.glsl  material.glsl  quasi.glsl
src/shaders/: copy_from_spectrum.glsl  copy_into_spectrum.glsl  direct_copy.glsl  draw_aperture.glsl  fft.glsl  frag.glsl  fs_dummy.glsl  fs_estimate_radiance.glsl  fs_gather_photons.glsl  fs_gen_visible_points.glsl  fs_load_convolution_buffers.glsl  fs_read_convolution_buffers.glsl  fs_scatter_photons.glsl  fs_update_estimates.glsl  fs_update_pixels.glsl  pointwise_multiply.glsl  present.glsl  vs_fft_pass.glsl  vs_scatter_photons.glsl  vs_transform_feedback_test.glsl
src/shaders/include/: camera.glsl  common.glsl  environment.glsl  geometry.glsl  halton.glsl  instance.glsl  integrator.glsl  material.glsl  material_basic.glsl  object.glsl  quasi.glsl  random.glsl
tests/: render.rs
tests/scenes/: default_scene.json  pink_glass.json
viewer/: .gitignore  index.html  index.js  package.json  tsconfig.json  vue.config.js  webpack.config.js
viewer/public/: index.html
viewer/src/: App.vue  main.ts
viewer/src/components/: AdvancedEditor.vue  CameraEditor.vue  CanvasContainer.vue  CanvasOverlay.vue  DocumentationEditor.vue  DownloadOverlay.vue  EditorContainer.vue  EnvironmentEditor.vue  JsonEditor.vue  LicensingEditor.vue  LoadingOverlay.vue  SaveLoadEditor.vue  StatusBar.vue  Toolbar.vue
viewer/src/helpers/: minimum_window.ts  scene_schema.ts  webgl_info.ts
viewer/src/prefab/: DefaultScene.ts  GlassThickness.ts
vue-test/: package.json
vue-test/public/: index.html
vue-test/src/: App.vue  main.ts
vue-test/src/components/: Viewport.vue
