[package]
name = "equinox"
edition = "2018"
version = "0.2.0"
build = "build.rs"
license = "MIT"
repository = "https://github.com/TomCrypto/equinox"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "WebGL2 real-time photon mapper"

[build-dependencies.lazy_static]
version = "1.4"

[build-dependencies.regex]
version = "1.3"
features = ["std"]
default-features = false

[dev-dependencies.libflate]
version = "0.1"

[dev-dependencies.png]
version = "0.15"

[dev-dependencies.serde_json]
version = "1.0"

[dev-dependencies.wasm-bindgen-test]
version = "0.2"

[dependencies.cgmath]
version = "0.17"
features = ["serde"]

[dependencies.console_error_panic_hook]
version = "0.1"

[dependencies.console_log]
version = "0.1"

[dependencies.half]
version = "1.3"

[dependencies.img2raw]
version = "0.3"

[dependencies.itertools]
version = "0.8"

[dependencies.js-sys]
version = "0.3"

[dependencies.lazysort]
version = "0.2"

[dependencies.log]
version = "0.4"

[dependencies.maplit]
version = "1.0"

[dependencies.rand]
version = "0.7"

[dependencies.rand_chacha]
version = "0.2"

[dependencies.regex]
version = "1.3"
features = ["std"]
default-features = false

[dependencies.quasirandom]
version = "0.2"

[dependencies.rustfft]
version = "3.0"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smart-default]
version = "0.5"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'HtmlCanvasElement',
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlSync',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
  'Window'
]

[dependencies.zerocopy]
version = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
