[package]
name = "equinox"
edition = "2018"
version = "0.8.2"
build = "build.rs"
license = "MIT"
publish = false
repository = "https://github.com/TomCrypto/equinox"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "WebGL2 real-time photon mapper"

[build-dependencies.built]
version = "0.3"

[build-dependencies.regex]
version = "1.3"
features = ["std"]
default-features = false

[dependencies.cgmath]
version = "0.17"

[dependencies.console_error_panic_hook]
version = "0.1"

[dependencies.console_log]
version = "0.1"

[dependencies.half]
version = "1.3"

[dependencies.img2raw]
version = "0.3"

# TODO: restore when https://github.com/rust-itertools/itertools/pull/382 is merged
[dependencies.itertools]
git = "https://github.com/rust-itertools/itertools"
rev = "505e0f4e48e98398074f7087a2d6a8f3018efea3"

[dependencies.js-sys]
version = "0.3"

[dependencies.lies]
version = "0.0.3"

[dependencies.log]
version = "0.4"

[dependencies.rand]
version = "0.7"

[dependencies.rand_chacha]
version = "0.2"

[dependencies.regex]
version = "1.3"
features = ["std"]
default-features = false

[dependencies.quasi-rd]
version = "0.1"

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.smart-default]
version = "0.5"

[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[dependencies.web-sys]
version = "0.3"
features = [
  'WebGl2RenderingContext',
  'WebGlBuffer',
  'WebglCompressedTextureS3tcSrgb',
  'WebGlFramebuffer',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlUniformLocation',
  'WebGlVertexArrayObject',
]

[dependencies.zerocopy]
version = "0.2"

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
lto = true
