[package]
name = "coherence-base"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Common logic for the Coherence path tracer"
edition = "2018"

[dependencies.cgmath]
version = "0.17"

[dependencies.half]
version = "1.3"

[dependencies.itertools]
version = "0.8"

[dependencies.log]
version = "0.4"

[dependencies.ordered-float]
version = "1.0"

[dependencies.smart-default]
version = "0.5"

[dependencies.zerocopy]
version = "0.2"
