[package]
name = "coherence-webgl2-wasm"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "WASM module for the Coherence path tracer via WebGL2"
license = "MIT"
repository = "https://github.com/TomCrypto/coherence"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies.cgmath]
version = "0.17"

[dependencies.console_error_panic_hook]
version = "0.1"

[dependencies.console_log]
version = "0.1"

[dependencies.log]
version = "0.4"

[dependencies.coherence-base]
path = "../coherence-base"
version = "0.1"

[dependencies.coherence-webgl2]
path = "../coherence-webgl2"
version = "0.1"

[dependencies.wasm-bindgen]
version = "0.2.8"

[dependencies.web-sys]
version = "0.3.4"
features = ['WebGl2RenderingContext']
