[package]
name = "coherence-webgl2"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "WebGL2 device implementation for the Coherence path tracer"
edition = "2018"
build = "build.rs"

[build-dependencies.lazy_static]
version = "1.4"

[build-dependencies.regex]
version = "1.3"

[dependencies.js-sys]
version = "0.3"

[dependencies.log]
version = "0.4"

[dependencies.maplit]
version = "1.0"

[dependencies.rand]
version = "0.7"

[dependencies.rand_chacha]
version = "0.2"

[dependencies.regex]
version = "1.3"

[dependencies.coherence-base]
path = "../coherence-base"
version = "0.1"

[dependencies.quasirandom]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'WebGlQuery',
  'WebGlUniformLocation',
  'ExtDisjointTimerQuery',
  'WebGlFramebuffer',
]

[dependencies.zerocopy]
version = "0.2"
