[package]
name = "sigma-core"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "Sigma path tracer core"
edition = "2018"

[dependencies.cgmath]
version = "0.17"

[dependencies.itertools]
version = "0.8"

[dependencies.log]
version = "0.4"

[dependencies.ordered-float]
version = "1.0"

[dependencies.smart-default]
version = "0.5"

[dependencies.zerocopy]
version = "0.2"
