[package]
name = "sigma-webgl2"
version = "0.1.0"
authors = ["Thomas Bénéteau <thomas@bitwise.me>"]
description = "WebGL2 device implementation for the Sigma path tracer"
edition = "2018"

[dependencies.js-sys]
version = "0.3"

[dependencies.log]
version = "0.4"

[dependencies.maplit]
version = "1.0"

[dependencies.rand]
version = "0.7"

[dependencies.rand_chacha]
version = "0.2"

[dependencies.sigma-core]
path = "../sigma-core"

[dependencies.quasirandom]
version = "0.2"

[dependencies.web-sys]
version = "0.3"
features = [
  'Document',
  'Element',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGl2RenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlTexture',
  'Window',
  'WebGlUniformLocation',
  'WebGlFramebuffer',
  'Crypto',
]

[dependencies.zerocopy]
version = "0.2"
